# microservices/accounting/invoice/gen/src/controllers/mod.rs
@@ -9,4 +9,6 @@ pub mod get_customer_invoice;
 
 pub mod credit_customer_invoice;
 
+pub mod get_customer_invoice_document;
+
 pub mod get_customer_invoice_journal;
