# microservices/accounting/invoice/gen/src/handlers/mod.rs
@@ -11,4 +11,6 @@ pub mod get_customer_invoice;
 
 pub mod credit_customer_invoice;
 
+pub mod get_customer_invoice_document;
+
 pub mod get_customer_invoice_journal;
